--- a/client/components/Value/styles.css
+++ b/client/components/Value/styles.css
@@ -1,7 +1,7 @@
 .value {
   background: none;
   margin-top: 0;
-  width: 100%;
+  padding-right: 20px;
 }
 .valueContainer {
   position: relative;
