--- a/client/components/Value/styles.css
+++ b/client/components/Value/styles.css
@@ -1,7 +1,9 @@
 .value {
   background: none;
   margin-top: 0;
+  padding-left: 10px;
   padding-right: 20px;
+  width: 100%;
 }
 .valueContainer {
   position: relative;
