--- a/client/components/EditableValue/styles.css
+++ b/client/components/EditableValue/styles.css
@@ -5,7 +5,7 @@
   padding-right: 50px;
 }
 
-.icon {
+.icon, .iconSuccess, .firstIcon {
   display: block;
   cursor: pointer;
   flex: 1;
@@ -13,15 +13,15 @@
   color: #bbb;
 }
 
-.success {
+.success, .iconSuccess {
   color: #8bc34a;
 }
 
-.icon i {
+.icon i, .iconSuccess i, .firstIcon i {
   vertical-align: middle;
 }
 
-.icons, .iconsVisible {
+.icons, .iconsVisible, .firstIcon {
   position: absolute;
   right: 0;
   top: 0;
@@ -31,9 +31,21 @@
   transition: opacity ease-in-out .2s;
   transition-delay: 0.2s;
 }
+
 .iconsVisible {
   opacity: 1.0;
 }
-.container:hover .icons {
+
+.container:hover .icons, .container:hover .firstIcon {
   opacity: 1.0;
+}
+
+.firstIcon {
+  position: absolute;
+  left: -10px;
+  right: auto;
+  top: 0;
+  bottom: 0;
+  margin: 3px 0;
+  display: block;
 }
