--- a/client/components/Rpc/style.css
+++ b/client/components/Rpc/style.css
@@ -12,7 +12,8 @@
 
 .call {
   border-bottom: 2px solid #CCC6C6;
-  margin-top: 18.4px;  
+  margin-bottom: 18.4px;  
+  background: #f5f4f2;
 }
 .call:first-child {
   border-color: #6691C2;
@@ -21,6 +22,18 @@
 .call pre {
   margin: 0;
 }
-.call pre:nth-child(2) {
+.call pre:nth-child(3) {
+  padding-top: 0;
   color: #bbb;
+}
+.callNo {
+  float: right;
+  color: #ccc;
+}
+
+.history {
+  margin-top: calc(1em + 18.4px);
+  padding-top: 0;
+  overflow: auto;
+  max-height: 60vh;
 }
