--- a/client/components/Rpc/style.css
+++ b/client/components/Rpc/style.css
@@ -1,3 +1,8 @@
+.historyInfo {
+  margin-top: 0;
+  text-transform: initial;
+}
+
 .removeIcon {
   float: right;
   color: #bbb;
@@ -6,6 +11,7 @@
   transition-delay: 0.2s;
   opacity: 0;
 }
+
 div:hover > .removeIcon {
   opacity: 1.0;
 }
