rpc page - calls actions WIP

--- a/client/components/RpcCalls/style.css
+++ b/client/components/RpcCalls/style.css
@@ -18,19 +18,12 @@ div:hover > .removeIcon {
   width: 100%;
 }
 
-.callWrapper {
-  position: relative;
-}
-
 .call {
-  cursor: pointer;
+  position: relative;
   border-bottom: 2px solid #CCC6C6;
   margin-bottom: 18.4px;  
   background: #f5f4f2;
 }
-
-.callWrapper:hover .call { opacity: .3 }
-.callWrapper:hover .prevCallsToolbar { opacity: 1 }
 
 .call:first-child {
   border-color: #6691C2;
@@ -65,18 +58,42 @@ h3 + label > input {
   overflow-x: auto;
 }
 
-.prevCallsToolbar {
-  opacity: 0;
+.callActionsWrap {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
+  top: 5px;
+  right: 0;
+  opacity: 0;
+  transition: opacity ease-in-out 0.2s;
+  transition-delay: 0.2s;
 }
 
-.prevCallsToolbar a {
-  padding: 10px;
-  background: gray;
-  color: #fff;
+.call:hover .callActionsWrap {
+  opacity: 1
+}
+
+.callActionsButton {
+  display: block;
+}
+
+.callActionsWrap:hover .callActionsButton {
+  display: none !important;
+}
+
+.callActions {
+  display: none;
+}
+
+.callActionsWrap:hover .callActions {
+  display: block;
+}
+
+.callAction {
+  float: right;
+  transition: opacity ease-in-out .2s;
+  transition-delay: .2s;
+  opacity: 0;
+}
+
+.callActions:hover .callAction {
+  opacity: 1;
 }
