--- a/client/components/ToastrContainer/styles.css
+++ b/client/components/ToastrContainer/styles.css
@@ -1,13 +1,23 @@
 .toastrContainer {
   position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100px;
+  top: 81px;
+  right: 10px;
+  width: 200px;
 }
 
 .toast {
   padding: 10px;
-  font-size: 14px;
-  border: 1px solid #000;
-  margin-top: 10px;
+  font-size: 16px;
+  margin-bottom: 10px;
+  animation: fadein .5s;
 }
+
+.remove {
+  float: right;
+}
+
+@keyframes fadein {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
