--- a/client/components/ScrollTopButton/style.css
+++ b/client/components/ScrollTopButton/style.css
@@ -9,7 +9,7 @@
   animation: fadein .5s;
   background: #eee !important;
   border-radius: 50%;
-  border: 1px solid #98A598 !important;
+  border: 1px solid #6691C2 !important;
   z-index: 10;
   padding: 5px !important;
   width: 34px !important;
