--- a/client/components/Debug/style.css
+++ b/client/components/Debug/style.css
@@ -1,3 +1,7 @@
+.subheader {
+  margin-top: 0;
+}
+
 .inputTrigger { 
   display: none; 
   left: 310px;
@@ -21,11 +25,30 @@
   overflow: auto;
   background: #F5F4F2;
 }
+
 .log {
   margin: 0;
   white-space: nowrap;
   overflow: visible;
 }
+
 .container {
   width: 100%;
+}
+
+.actions {
+  float: right;
+  opacity: 0;
+  transition: opacity ease-in-out .5s;
+  transition-delay: 0.2s;
+}
+
+div:hover > .actions {
+  opacity: 1;
+}
+
+.actions a {
+  margin-left: 5px;
+  cursor: pointer;
+  color: #bbb;
 }
