--- a/client/components/DappContent/styles.css
+++ b/client/components/DappContent/styles.css
@@ -1,7 +1,8 @@
 .content {
   background: none;
-  border: 1px solid #e44;
+  border: none;
+  border-top: 1px solid #e44;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 54px);
   box-sizing: border-box;
 }
