--- a/client/components/TopBar/styles.css
+++ b/client/components/TopBar/styles.css
@@ -19,4 +19,5 @@ html {
   border-bottom: 1px solid #d3cbc8;
   background: #dfd6d3;
   box-shadow: 0 0 2px rgba(119, 102, 102, 0.75);
+  z-index: 999;
 }
