--- a/client/components/TopBar/styles.css
+++ b/client/components/TopBar/styles.css
@@ -1,5 +1,6 @@
 html {
   padding-top: 55px !important;
+  background: #fff;
 }
 
 .header {
@@ -18,6 +19,6 @@ html {
   padding-bottom: 5px;
   border-bottom: 1px solid #d3cbc8;
   background: #dfd6d3;
-  box-shadow: 0 0 2px rgba(119, 102, 102, 0.75);
-  z-index: 999;
+  box-shadow: 0 -3px 2px -3px rgba(119, 102, 102, 0.75);
+  z-index: -1;
 }
