--- a/client/components/AccountsDetails/styles.css
+++ b/client/components/AccountsDetails/styles.css
@@ -1,7 +1,15 @@
+.acc {
+  display: flex;
+  align-items: center;
+}
+
 .acc img {
-  width: 32px;
-  height: 32px;
-  margin: 0 8px;
+  width: 48px;
+  height: 48px;
+  margin: 20px 8px 5px;
   vertical-align: middle;
-  float: left;
+}
+
+.inputs {
+  flex: 1;
 }
