--- a/client/components/Home/styles.css
+++ b/client/components/Home/styles.css
@@ -1,12 +1,13 @@
+.home {
+  font-family: 'Roboto', sans-serif;
+}
 .loading {
   text-align: center;
   margin-top: 25vh;
 }
-
 .error {
   margin-top: 15vh;
   text-align: center;
-  font-family: 'Roboto', sans-serif;
 }
 .error h1 {
   color: #F44336;
