Some styling for apps list

--- a/client/components/AppsList/styles.css
+++ b/client/components/AppsList/styles.css
@@ -3,5 +3,15 @@
   color: #bbb;
 }
 .container {
-  margin: 2em;
+  padding: 2em;
+  margin: auto;
+  max-width: 1000px;
+}
+.image {
+  box-sizing: border-box;
+  width: 100%;
+  height: calc(100% - 70px);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
