--- a/client/components/AccountsDetails/AccountsDetails.css
+++ b/client/components/AccountsDetails/AccountsDetails.css
@@ -13,3 +13,16 @@
 .inputs {
   flex: 1;
 }
+
+.createAccountButton {
+  position: absolute;
+  top: 28px;
+  right: 20px;
+  opacity: 0.4;
+  cursor: pointer;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.createAccountButton:hover {
+  opacity: 0.8;
+}
