--- a/client/components/TopBar/TopBar.css
+++ b/client/components/TopBar/TopBar.css
@@ -31,3 +31,19 @@ html,body {
   box-shadow: 0 -3px 2px -3px rgba(119, 102, 102, 0.75);
   z-index: -1;
 }
+
+.createAccount {
+  cursor: pointer;
+}
+
+.settings {
+  margin-right: 5px;
+  opacity: 0.1;
+  transition: opacity 0.3s ease-in-out;
+}
+.settings:hover {
+  opacity: 0.8;
+}
+.settings svg {
+  vertical-align: -7px;
+}
