--- a/client/components/StatusLine/StatusLine.css
+++ b/client/components/StatusLine/StatusLine.css
@@ -12,7 +12,7 @@
 }
 
 .info li {
-  padding: 5px 5px 0;
+  padding: 0 5px;
   flex: 1;
   border-right: 1px solid #daa;
   border-left: 1px solid #eee;
