--- a/src/Transaction/Transaction.css
+++ b/src/Transaction/Transaction.css
@@ -1,6 +1,11 @@
+.container {
+  padding: 20px;
+}
+
 .mainContainer > * {
   display: inline-block;
   vertical-align: middle;
+  min-height: 110px;
 }
 
 .bottomContainer {
@@ -12,6 +17,7 @@
 
 .bottomContainer > * {
   float: left;
+  margin-right: 3px;
 }
 
 .transaction {
@@ -56,6 +62,10 @@
 .confirmButton {
   margin-bottom: 10px;
   display: block !important;
+}
+
+.confirmForm {
+  margin-top: -40px;
 }
 
 /* the link that opens the rejection form */
@@ -113,6 +123,7 @@
 .fee {
   background: url('../assets/pickaxe.png');
   display: inline-block;
+  cursor: pointer;
   width: 20px;
   height: 20px;
 }
@@ -122,4 +133,8 @@
   clear: both;
   margin-top: 35px;
   margin-bottom: 20px;
+}
+
+.confirmForm {
+  margin-top: -40px;
 }
