--- a/app/containers/App/App.css
+++ b/app/containers/App/App.css
@@ -24,15 +24,5 @@
 }
 
 .normal h1 {
-  position: absolute;
-  top: -155px;
-  width: 100%;
-  font-size: 100px;
-  font-weight: 100;
-  text-align: center;
-  color: rgba(175, 47, 47, 0.15);
-  -webkit-text-rendering: optimizeLegibility;
-  -moz-text-rendering: optimizeLegibility;
-  -ms-text-rendering: optimizeLegibility;
-  text-rendering: optimizeLegibility;
+  margin: 0;
 }
