--- a/src/Transaction/Transaction.css
+++ b/src/Transaction/Transaction.css
@@ -121,11 +121,13 @@
 }
 
 .fee {
-  background: url('../assets/pickaxe.png');
-  display: inline-block;
   cursor: pointer;
+}
+
+.fee img {
   width: 20px;
   height: 20px;
+  vertical-align: bottom;
 }
 
 .feeSlider {
