--- a/client/components/TopBar/TopBar.css
+++ b/client/components/TopBar/TopBar.css
@@ -31,6 +31,33 @@ html,body {
   z-index: -1;
 }
 
+.statusVisible {
+  animation: showStatus 1s linear 0s 1 normal forwards;
+}
+@media (max-width: 800px) {
+  .statusVisible { display: none; }
+}
+
+.statusHidden {
+  opacity: 0;
+  display: none;
+}
+
+@keyframes showStatus {
+  0% {
+    opacity: 0;
+    display: none;
+  }
+  50% {
+    opacity: 0;
+    display: block;
+  }
+  100% {
+    opacity: 1;
+    display: block;
+  }
+}
+
 .dapps {
   width: 32px;
   height: 32px;
