Additional styling of accounts

--- a/client/components/Account/Account.css
+++ b/client/components/Account/Account.css
@@ -1,5 +1,5 @@
-.address {
-  font-family: monospace;
+.account {
+  white-space: nowrap;
 }
 
 .account img {
@@ -9,11 +9,22 @@
   margin-right: 3px;
 }
 
-.name {
+.name, .balance, .address {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
   max-width: 110px;
   display: inline-block;
   vertical-align: middle;
+}
+
+.address {
+  font-family: monospace;
+  margin: 0 3px;
+}
+
+@media (max-width: 480px) {
+  .address {
+    display: none;
+  }
 }
