--- a/src/TransactionMainDetails/TransactionMainDetails.css
+++ b/src/TransactionMainDetails/TransactionMainDetails.css
@@ -17,10 +17,11 @@
 }
 
 .tx {
+  position: relative;
   text-align: center;
   margin-right: 10px;
   margin-left: 10px;
-  position: relative;
+  width: 150px;
   top: -20px;
 }
 
@@ -32,11 +33,15 @@
 .contract {
   position: relative;
   bottom: 15px;
-  text-align: middle;
+  text-align: center;
+  width: 123px;
 }
 
 .contractIcon {
   background: #eee;
+  width: 50px !important;
+  height: 50px !important;
+  box-sizing: border-box;
   border-radius: 50%;
-  padding: 16px;
+  padding: 13px;
 }
