--- a/app/components/UnAuthorized/UnAuthorized.css
+++ b/app/components/UnAuthorized/UnAuthorized.css
@@ -2,3 +2,9 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+.code {
+  background: #e4e4e4;
+  padding: 4px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+}
