--- a/src/TransactionPending/TransactionPending.css
+++ b/src/TransactionPending/TransactionPending.css
@@ -48,9 +48,12 @@
   cursor: pointer;
 }
 
+.data.noData {
+  cursor: text;
+}
+
 .gasPrice {
   composes: hasInfoIcon;
-  cursor: pointer;
 }
 
 .dataTooltip {
