--- a/src/TransactionPending/TransactionPending.css
+++ b/src/TransactionPending/TransactionPending.css
@@ -2,6 +2,11 @@
   padding: 25px;
 }
 
+.transactionDetails {
+  border-right: 1px solid #eee;
+  margin-right: 2rem;
+}
+
 .mainContainer > * {
   display: inline-block;
   vertical-align: middle;
@@ -72,4 +77,8 @@
 .expandedContainer {
   padding: 10px;
   border-radius: 4px;
+}
+
+.expandedContainer:empty {
+  padding: 0;
 }
