--- a/client/components/TopBar/TopBar.css
+++ b/client/components/TopBar/TopBar.css
@@ -4,6 +4,8 @@ html {
 html,body {
   background: #fff;
   margin: 0;
+  position: relative;
+  z-index: 1;
 }
 
 .nowrap {
@@ -32,7 +34,7 @@ html,body {
   border-bottom: 1px solid #d3cbc8;
   background: #dfd6d3;
   box-shadow: 0 -3px 2px -3px rgba(119, 102, 102, 0.75);
-  z-index: -1;
+  z-index: 0;
 }
 
 .statusVisible {
