--- a/client/components/TransactionConfirmation/TransactionConfirmation.css
+++ b/client/components/TransactionConfirmation/TransactionConfirmation.css
@@ -7,7 +7,7 @@
 }
 .from {
   text-align: right;
-  flex: 2;
+  flex: 2 1 auto;
 }
 .from img, .to img {
   display: inline-block;
@@ -21,12 +21,12 @@
 }
 
 .tx {
-  flex: 1;
+  flex: 1 1 auto;
   text-align: center;
   padding-top: 25px;
 }
 
 .to {
   text-align: left;
-  flex: 2;
+  flex: 2 1 auto;
 }
