Fixing names and scrollbar

--- a/chrome/views/popup.jade
+++ b/chrome/views/popup.jade
@@ -3,7 +3,8 @@ doctype html
 html
   head
     meta(charset='UTF-8')
-    title Redux TodoMVC Example (Popup)
+    meta(name='viewport' content='width=device-width')
+    title Parity Signer UI
 
   body
     #root
