--- a/chrome/views/window.jade
+++ b/chrome/views/window.jade
@@ -3,7 +3,8 @@ doctype html
 html
   head
     meta(charset='UTF-8')
-    title Redux TodoMVC Example (Window)
+    meta(name='viewport' content='width=device-width')
+    title Parity Signer UI
   body
     #root
     script(src=env == 'prod' ? '/js/App.bundle.js' : 'http://localhost:3030/js/App.bundle.js')
