--- a/app/components/UnAuthorized/UnAuthorized.css
+++ b/app/components/UnAuthorized/UnAuthorized.css
@@ -1,7 +1,12 @@
+.container {
+  padding: 25px;
+}
+
 .toggleToken {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
 .code {
   background: #e4e4e4;
   padding: 4px;
