imporve transaction styles

--- a/src/TransactionFinished/TransactionFinished.css
+++ b/src/TransactionFinished/TransactionFinished.css
@@ -8,14 +8,13 @@
   min-height: 110px;
 }
 
-.fee {
-  cursor: pointer;
+.statusContainer {
+  width: 300px;
 }
 
-.fee img {
-  width: 20px;
-  height: 20px;
-  vertical-align: bottom;
+.transactionDetails {
+  border-right: 1px solid #eee;
+  margin-right: 2rem;
 }
 
 .isConfirmed {
@@ -23,5 +22,22 @@
 }
 
 .isRejected {
+  opacity: 0.7;
+}
+
+.error svg {
+  fill: red !important; /* shameon material-ui using inline styles */
+}
+
+.error > span {
   color: red;
+}
+
+.error > * {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.txHash {
+  word-break: break-all;
 }
