--- a/app/index.css
+++ b/app/index.css
@@ -1,15 +1,39 @@
-:global a {
+html * {
+  font-family: "Source Sans Pro", "Helvetica Neue", arial;
+}
+
+a {
   cursor: pointer;
 }
 
-:global h1 {
-  font-weight: bold;
+h1 {
   font-size: 2em;
   margin-top: .67em;
   margin-bottom: .67em;
 }
 
-:global p {
+h1, h2, h3, h4, strong {
+  font-family: 'Source Sans Pro Bold';
+}
+
+p {
   margin-top: 1em;
   margin-bottom: 1em;
 }
+
+input {
+  font-family: "Source Sans Pro", "Helvetica Neue", arial !important; /* shame on material ui using inline styles */
+}
+
+@font-face {
+  font-family: 'Source Sans Pro Bold';
+  src:  url('./assets/fonts/sourcesanspro-bold-webfont.woff2') format('woff2'),
+        url('./assets/fonts/sourcesanspro-bold-webfont.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  src:  url('./assets/fonts/sourcesanspro-regular-webfont.woff2') format('woff2'),
+        url('./assets/fonts/sourcesanspro-regular-webfont.woff') format('woff');
+}
+
