--- a/app/index.css
+++ b/app/index.css
@@ -7,7 +7,7 @@ a {
 }
 
 a:hover {
-  font-family: 'Source Sans Pro Bold';
+  text-decoration: underline;
 }
 
 h1 {
@@ -16,7 +16,11 @@ h1 {
   margin-bottom: .67em;
 }
 
-h1, h2, h3, h4, strong {
+h1, h2, h3, h4 {
+  font-family: 'Source Sans Pro Light', 'Source Sans Pro';
+}
+
+strong {
   font-family: 'Source Sans Pro Bold';
 }
 
