Some better styling

--- a/client/components/StatusLine/StatusLine.css
+++ b/client/components/StatusLine/StatusLine.css
@@ -27,3 +27,12 @@
   border-right: none;
 }
 
+.info a, .info a:visited {
+  text-decoration: none;
+  color: #2196F3;
+}
+.info a:hover, .info a:active {
+  text-decoration: underline;
+  color: #2C78B5;
+}
+
