--- a/client/components/ExtensionLink/styles.css
+++ b/client/components/ExtensionLink/styles.css
@@ -1,9 +1,11 @@
 .link {
   line-height: 26px;
+  font-family: 'Roboto', sans-serif;
 }
 .link a, .link a:visited {
   text-decoration: none;
   color: #2196F3;
+  white-space: nowrap;
 }
 .link a:hover, .link a:active {
   text-decoration: underline;
