--- a/client/components/TopBar/TopBar.css
+++ b/client/components/TopBar/TopBar.css
@@ -72,13 +72,6 @@ html,body {
   top: -4px;
 }
 
-.createAccount {
-  cursor: pointer;
-  line-height: 26px;
-  display: inline-block;
-  margin: 14px 0;
-}
-
 .settings {
   margin-right: 5px;
   opacity: 0.1;
@@ -127,4 +120,22 @@ html,body {
 }
 .separator {
   flex: 1 0 auto;
+}
+
+.link {
+  cursor: pointer;
+  line-height: 26px;
+  font-family: 'Roboto', sans-serif;
+  padding: 0 7px 0;
+  margin: 15px 8px 5px;
+  border-left: 1px solid #eee;
+}
+.link a, .link a:visited {
+  text-decoration: none;
+  color: #2196F3;
+  white-space: nowrap;
+}
+.link a:hover, .link a:active {
+  text-decoration: underline;
+  color: #2C78B5;
 }
