--- a/app/components/Header/Header.css
+++ b/app/components/Header/Header.css
@@ -1,4 +1,10 @@
 .bar {
-  padding-right: calc((100% - 800px) / 2) !important;
-  padding-left: calc((100% - 800px) / 2) !important;
+  padding: 0 !important;
+}
+.bar h1 {
+  box-sizing: border-box;
+  width: 800px !important;
+  margin: 0 auto !important;
+  flex: none !important;
+  padding: 0 25px !important;
 }
