(TopBar) fix toasts and transcation confirmation

--- a/components/src/Toast/Toast.css
+++ b/components/src/Toast/Toast.css
@@ -6,6 +6,10 @@
   animation: fadein .5s;
 }
 
+.container.clickable {
+  cursor: pointer;
+}
+
 .error {
   background: red !important;
   color: #fff !important;
