--- a/signer/web/src/components/Header/Header.css
+++ b/signer/web/src/components/Header/Header.css
@@ -3,7 +3,8 @@
 }
 .bar h1 {
   box-sizing: border-box;
-  width: 800px !important;
+  max-width: 800px !important;
+  width: 100% !important;
   margin: 0 auto !important;
   flex: none !important;
   padding: 0 25px !important;
