--- a/components/src/Toast/Toast.css
+++ b/components/src/Toast/Toast.css
@@ -1,9 +1,21 @@
 .container {
-  padding: 10px;
+  padding: 15px;
   position: relative;
   font-size: 16px;
-  margin-bottom: 10px;
+  line-height: 19px;
+  margin-bottom: 1.2rem;
   animation: fadein .5s;
+}
+
+.container .remove {
+  opacity: 0;
+  padding: 0 !important;
+  width: 24px !important;
+  height: 24px !important;
+  transition: opacity .3s ease-in;
+}
+.container:hover .remove {
+  opacity: 0.5;
 }
 
 .container.clickable {
@@ -11,29 +23,24 @@
 }
 
 .error {
-  background: red !important;
+  background: #E53935 !important;
   color: #fff !important;
 }
 
-.succes {
-  background: green !important;
+.success {
+  background: #43A047 !important;
   color: #fff !important;
 }
 
 .remove {
   float: right;
   cursor: pointer;
+  opacity: 0.5;
 }
 
 .error .remove,
 .success .remove {
   color: #fff !important;
-}
-
-.msg {
-  color: #000;
-  font-size: 18px;
-  text-shadow: 0px 0px 2px rgb(103, 103, 103);
 }
 
 @keyframes fadein {
