change Home background to match status/Ethcore gray

--- a/home/web/client/components/Home/Home.css
+++ b/home/web/client/components/Home/Home.css
@@ -1,5 +1,7 @@
 .home {
   font-family: 'Roboto', sans-serif;
+  background: rgb(34, 34, 40);
+  height: 100%;
 }
 .loading {
   text-align: center;
