--- a/home/web/client/error_pages.css
+++ b/home/web/client/error_pages.css
@@ -14,7 +14,7 @@
     text-rendering: optimizeLegibility;
 }
 
-html:root, :root body {
+:root, :root body {
   margin: 0;
   padding: 0;
   border: 0;
