--- a/components/src/SignRequest/SignRequest.css
+++ b/components/src/SignRequest/SignRequest.css
@@ -12,7 +12,7 @@
   border-right: 1px solid #eee;
   margin-right: 2rem;
   /* TODO [todr] mess - just to align with transaction */
-  width:  430px;
+  width:  440px;
 }
 
 .address, .info {
@@ -54,4 +54,15 @@
   width: 50px;
   height: 50px;
   margin: 5px;
+}
+
+.raw {
+  font-family: 'Roboto Mono', monospace;
+  padding: 3px;
+  background-color: #eee;
+  margin: 5px 0;
+  border: none;
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
 }
